src/objects/MUSW__Work_Item__c.object
<CustomObject>
    <description>Breakdown of work and items on a Permit that impacts the total construction valuation</description>
    <fields>
        <fullName>MUSW__Category__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Group__c</fullName>
        <description>Field to group work items in ReviewView page</description>
        <label>Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Building</fullName>
                </value>
                <value>
                    <fullName>Electrical</fullName>
                </value>
                <value>
                    <fullName>Mechanical</fullName>
                </value>
                <value>
                    <fullName>Plumbing</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Permit2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Permit</label>
        <referenceTo>MUSW__Permit2__c</referenceTo>
        <relationshipLabel>Work Items</relationshipLabel>
        <relationshipName>Work_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Permit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Permit</label>
        <referenceTo>MUSW__Permit__c</referenceTo>
        <relationshipName>Work_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Quantity2__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>As measured by unit type</inlineHelpText>
        <label>Size</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Count or Number of Items.</description>
        <inlineHelpText>Count or Number of Items. Eg 2 Deck Areas, or 5 Faucets</inlineHelpText>
        <label>Quantity</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Sub_Category__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sub Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Summary__c</fullName>
        <defaultValue>$RecordType.DeveloperName</defaultValue>
        <description>a field carries work item summaries which concat important fields altogether</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Total_Item_Value__c</fullName>
        <formula>(NULLVALUE(MUSW__Quantity__c,1) *  NULLVALUE(MUSW__Quantity2__c,1) )  *  NULLVALUE(MUSW__Value_Per_Unit__c,0)</formula>
        <label>Total Item Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MUSW__Group__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>FURNACE</fullName>
                </value>
                <value>
                    <fullName>SEWER CONNECTION</fullName>
                </value>
                <value>
                    <fullName>LIVING SPACE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Unit__c</fullName>
        <label>Unit</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MUSW__Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>SQ FT</fullName>
                    <default>true</default>
                    <label>SQ FT</label>
                </value>
                <value>
                    <fullName>FT</fullName>
                </value>
                <value>
                    <fullName>1K BTU</fullName>
                </value>
                <value>
                    <fullName>FLAT</fullName>
                </value>
                <value>
                    <fullName>GAL</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>$</fullName>
                </value>
                <value>
                    <fullName>100 LI</fullName>
                </value>
                <value>
                    <fullName>1K CFM</fullName>
                </value>
                <value>
                    <fullName>AMP</fullName>
                </value>
                <value>
                    <fullName>CU YD</fullName>
                </value>
                <value>
                    <fullName>SYSTEM</fullName>
                </value>
                <value>
                    <fullName>DEVICE</fullName>
                </value>
                <value>
                    <fullName>LIN FT</fullName>
                </value>
                <value>
                    <fullName>HEADS</fullName>
                </value>
                <value>
                    <fullName>HOUR</fullName>
                </value>
                <value>
                    <fullName>INCH</fullName>
                </value>
                <value>
                    <fullName>QTY</fullName>
                </value>
                <value>
                    <fullName>SQ YD</fullName>
                </value>
                <value>
                    <fullName>EACH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Value_Per_Unit__c</fullName>
        <label>Value Per Unit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Item_Calculated__c</fullName>
        <label>Total Item Calculated</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Work Item</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Items</pluralLabel>
    <recordTypes>
        <fullName>MUSW__All</fullName>
        <active>true</active>
        <label>All</label>
    </recordTypes>
    <recordTypes>
        <fullName>MUSW__Capacity</fullName>
        <active>true</active>
        <label>Capacity</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>